# opengl_tutorials

./: .gitignore  CMakeLists.txt  README.md  debug.cpp  main.cpp  opengl_tutorials.h
chapter_1/: color.cpp  triangle.cpp
chapter_1/shaders/: fragment.vs  triangle_vertex.vs
chapter_2/: dot.cpp  triangle.cpp
chapter_2/shaders/: vertex.vs
chapter_3/: animated_triangle.cpp
scripts/: import_shader.py
shaders/: animated_triangle_vertex.vert  buffer_triangle_vertex.vert  color_triangle_vertex.vert  fragment.vert  gradient_frag.vert  gradient_vert.vert  tess_triangle_fragment.vert  tess_triangle_vertex.vert  triangle_control_shader.vert  triangle_eval_shader.vert  triangle_frag.vert  triangle_geo_shader.vert  triangle_vertex.vert  vector_fragment.vert  vector_triangle_vertex.vert  vertex.vert  vertex.vs
src/: chapter_02_color.cpp  chapter_02_dot.cpp  chapter_02_triangle.cpp  chapter_03_animated_triangle.cpp  chapter_03_color_triangle.cpp  chapter_03_fragment_triangle.cpp  chapter_03_geo_tessellated_triangle.cpp  chapter_03_gradient_triangle.cpp  chapter_03_tessalated_triangle.cpp  chapter_03_tessellated_triangle.cpp  chapter_05_triangle.cpp  chapter_05_vector_of_structures.cpp
